fixed visibility hidden vs display none for expiration date on user show page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -158,9 +158,7 @@ a {
 
 /*this is probably not the best way to do this, but I wanted to have these expiration dates available on the page for browser javascript, but not visible*/
 .user_page_expirationDate {
-  height: 0;
-  width: 0;
-  visibility: hidden;
+  display: none;
 }
 
 .edit_delete_pantry {
